Fixed Character component to fetch all data points

--- a/src/components/options.module.css
+++ b/src/components/options.module.css
@@ -9,7 +9,8 @@
   border-radius: 20px; /* Rounded corners */
   font-size: 15px; /* Adjust font size */
   transition: background 0.3s, transform 0.3s; /* Smooth transition effects */
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 .button:hover {
