--- a/src/components/characters.module.css
+++ b/src/components/characters.module.css
@@ -1,22 +1,52 @@
 .charactersDashboard {
   flex-direction: column;
   color: white;
-  text-shadow: 10px 10px 10px black;
   min-height: 200px;
-  position: relative; /* Position relative to contain the absolutely positioned list */
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .characterSelect {
-  width: 200px;
-  padding: 10px;
-  margin: 10px 0;
+  width: 250px;
+  padding: 10px 20px;
+  margin: 10px auto;
   font-size: 1rem;
   border: none;
   border-radius: 30px;
+  display: block;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
-.listItem {
+label {
+  text-shadow: 10px 10px 10px black;
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+
+.mappedList {
+  overflow-y: auto;
+  flex-direction: column;
+  padding: 20px;
+  margin: 10px auto;
+  max-height: calc(100vh - 450px);
+  max-width: 80vw;
+  justify-content: center;
+}
+
+.listItems {
+  background: rgba(0, 0, 0, 0.3);
+}
+
+p {
+  margin: 0;
+  padding: 0;
+  line-height: 1.5rem;
+}
+
+h2 {
+  margin: 0px;
+  padding: 5px;
+  text-shadow: 5px 2px 10px black;
 }
