--- a/src/components/dashboard.module.css
+++ b/src/components/dashboard.module.css
@@ -6,10 +6,9 @@
   flex: 1;
   height: 100vh;
   width: 100vw;
-  margin: 30px auto;
+  margin: 30px auto 0px;
   color: white;
   text-align: center;
-  /* max-height: 100vh; */
 }
 
 h1 {
