--- a/src/components/dashboard.module.css
+++ b/src/components/dashboard.module.css
@@ -1,24 +1,21 @@
 .dashboard {
   display: grid;
   place-content: center;
-  z-index: 50;
   position: relative;
   flex: 1;
   height: 100vh;
   width: 100vw;
-  margin: 30px auto 0px;
   color: white;
   text-align: center;
 }
 
 h1 {
-  padding: 10px 10px;
-  margin: 0 auto;
+  margin: 15px auto;
   text-shadow: 10px 10px 10px black;
 }
 
 .layout {
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  gap: 5px;
 }
