--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,8 @@ main {
 
 footer {
   padding: 10px;
-  display: grid;
+  display: flex;
+  margin: 0 auto;
   place-items: center;
   color: white;
   text-shadow: 20px 20px 10px white;
